# VaultParser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ethicalcheck.yml  release.yml  rust-clippy.yml
src/: config.rs  error.rs  exporter.rs  lib.rs  main.rs  models.rs  parser.rs  presets.rs
static/: app.js  index.html  style.css
