[package]
name = "vaultparser"
version = "0.1.4"
edition = "2024"
description = "A fast, pure-Rust library and visual tool for extracting tabular transaction ledgers from PDF bank statements"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/SV-stark/VaultParser"
homepage = "https://github.com/SV-stark/VaultParser"
keywords = ["pdf", "bank-statement", "parser", "extractor", "xlsx"]
categories = ["parser-implementations", "text-processing"]
exclude = [
    "*.pdf",
    "*.csv",
    "*.log",
    "static/sample_hdfc.pdf",
    "static/sample_hdfc_decrypted.pdf",
    "temp/**"
]

[dependencies]
pdfsink-rs = "0.2.8"
axum = { version = "0.7", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
csv = "1.3"
rust_xlsxwriter = "0.95.0"
lopdf = "0.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:serde_json"]

[[bin]]
name = "vaultparser"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
