[package]
name = "vaultparser"
version = "0.2.3"
edition = "2024"
description = "A fast, pure-Rust library and visual tool for extracting tabular transaction ledgers from PDF bank statements"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/SV-stark/VaultParser"
homepage = "https://github.com/SV-stark/VaultParser"
keywords = ["pdf", "bank-statement", "parser", "extractor", "xlsx"]
categories = ["parser-implementations", "text-processing"]
exclude = [
    "*.pdf",
    "*.csv",
    "*.log",
    "static/sample_hdfc.pdf",
    "static/sample_hdfc_decrypted.pdf",
    "temp/**"
]

[dependencies]
pdfsink-rs = "0.2.8"
axum = { version = "0.7", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
csv = "1.3"
rust_xlsxwriter = "0.96"
lopdf = "0.43"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.18"

[features]
default = []
web = ["dep:axum", "dep:tokio", "dep:tower-http"]

[[bin]]
name = "vaultparser"
path = "src/main.rs"
required-features = ["web"]

[[bin]]
name = "vpcli"
path = "src/bin/vpcli.rs"
